<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/txt_home" />

        <item
            android:id="@+id/nav_repos"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/txt_repositories" />
    </group>

    <item android:title="@string/txt_my_account">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/txt_my_profile" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/txt_logout" />
        </menu>
    </item>

</menu>
